# SportHold

./: .gitignore  app.py  database.db  example.db  main.py  mkdocs.yml  pyproject.toml  pytest.toml  test.py  test2.py  test_app.db  test_data.py
app/telegram/: bot.py
conf/: config.yaml
configuration/: alembic_local_sqlite.ini
docs/: dev_timetable.md  example_find_nth_weekday_in_m.md  example_schedule  example_schedule.md  index.md  todo.md  users_concept.md  weekdays_model.md
locales/: ru.ftl
src/: config.py
src/controllers/: memorydb.py  objects.py  schedules.md  schedules.py  slots.py  users.py
src/db/: connect.py  models.py
src/models/: objects.py  queues.py  schedules.py  slots.py  users.py
src/telegram/: bot.py
test/: test_objects.py  test_queue.py  test_queues.py  test_scenario_happy_path.py  test_schedules.py  test_slots.py  test_sqlite_user.py  test_users.py
tests/: conftest.py  test_cli.py  test_db_object.py  test_db_rental.py  test_db_schedule.py  test_db_schedule_add_slot.py  test_db_slot.py  test_db_user.py  test_uils_cli_cli.py
tests/cli/: test_cli.py
tests/db/: test_db_schedule.py  test_db_schedule_add_slot.py  test_db_user.py
tests/helpers/: test_day_in_month.py  test_quartals.py  test_weekdays.py  test_weeks.py
tests/local/: pydantic_sqlalch_relation.py  sqlalch_intflag_enum.py
tests/models/: conftest.py  test_model_user.py  test_rental_model.py
tests/schedule/: conftest.py  test_schedule.py
utils/alembic/: alembic_local_pg.ini  env.py
utils/cli/: __init__.py  cli.py
utils/conf/: config.py
utils/db/: test.py  (+2 more)
(+85 files in other folders)
